--- a/cards/templates/cards/home.html
+++ b/cards/templates/cards/home.html
@@ -335,7 +335,7 @@
         </div>
         
         <div class="text-center mt-5" data-aos="fade-up">
-            <a href="{% url 'register' %}" class="btn btn-primary btn-lg btn-glow px-5">
+            <a href="{% url 'login' %}" class="btn btn-primary btn-lg btn-glow px-5">
                 <i class="fas fa-user-plus me-2"></i> Register Now
             </a>
         </div>
@@ -595,7 +595,7 @@
             <div class="col-lg-8" data-aos="fade-up">
                 <h2 class="display-4 fw-bold mb-4">Ready to Transform Your Networking?</h2>
                 <p class="lead mb-5">Join thousands of professionals who have upgraded to digital business cards.</p>
-                <a href="{% url 'register' %}" class="btn btn-light btn-lg px-5 me-3">
+                <a href="{% url 'login' %}" class="btn btn-light btn-lg px-5 me-3">
                     <i class="fas fa-user-plus me-2"></i> Sign Up Free
                 </a>
                 <a href="#contact" class="btn btn-outline-light btn-lg px-5">
