--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -44,9 +44,9 @@
             <input type="hidden" name="next" value="{{ next }}">
           </form>
           
-          <div class="mt-3 text-center">
+          <!-- <div class="mt-3 text-center">
             <p><a href="{% url 'password_reset' %}">Forgot your password?</a></p>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
